# lib-daemon-cpp

./: .gitignore  CMakeLists.txt  README.md  daemoncpp.kdev4  daemoncpp.pc.in
example/CPUtempLogger/: CMakeLists.txt  CPUtempLogger.kdev4  cputemplogger.service  main.cpp
include/: daemoncpp.h
src/: daemoncpp.cpp
